<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FindMyApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_apps">Refresh list</string>
    <string name="action_list_all">All Apps</string>
    <string name="action_about">About</string>
    <string name="hello_world">Bem-vindo!</string>
    <string name="top_apps">More used:</string>
    <string name="last_apps">Last changes:</string>
    <string name="find_field">Find your app</string>
    <string name="apps_found">apps found</string>
    <string name="app_found">app found</string>
    <string name="preparing_list">Preparing list&#8230;</string>
    <string name="please_wait">Please wait.</string>
    <string name="notification_message">Tap to access the app.</string>
    
    <!-- Alert unknown app -->
    
    <string name="unknown_app">Unknown App</string>
    <string name="not_run_app">This app not can run in FindMyApp.\nRemove from list?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    
    <!-- Preferecias -->

    <string name="pref_auto_start">Auto start in notification</string>
    <string name="pref_auto_start_summary">Auto start application when the system restarts</string>
    <string name="pref_close_app">Close app after start</string>
    <string name="pref_close_app_summary">Close after start the selected app</string>
    <string name="pref_view_notification">View in notification</string>
    <string name="pref_view_notification_summary">Show app in notification bar to switch quickly when is starts</string>
    <string name="pref_auto_rotate">Auto rotate screen</string>
    <string name="pref_auto_rotate_summary">Enable/Disable rotate the screen</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="title_System">System</string>
    <string name="title_Other">Other</string>
    <string name="pref_find_piece_name">Piece of the name</string>
    <string name="pref_find_piece_name_summary">Find any part of the name of the app</string>
    <string name="pref_hide_keyboard">Hide keyboard</string>
    <string name="pref_hide_keyboard_summary">Hide the keyboard when app starts</string>
    
    <!-- Sub menu  selected app -->
    
    <string name="sub_menu_run">Run</string>
    <string name="sub_menu_uninstall_app">Uninstall</string>
    
    <!-- Refresh functionality -->
    
    <string name="refresh">Updating</string>
    <string name="refresh_msg">Please wait&#8230;</string>

</resources>
