<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_all_apps"
        android:icon="@drawable/ic_action_all_apps"
        android:showAsAction="ifRoom"
        android:title="@string/action_list_all"/>
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_submenu_refresh_apps"
                android:title="@string/action_refresh_apps"/>
             <item
                android:id="@+id/action_submenu_settings"
                android:title="@string/action_settings"/>
        </menu> 
       
</item>
</menu>